# models/nucleo_basico_conocimiento.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -17,6 +18,7 @@ type NucleoBasicoConocimiento struct {
 	CodigoAbreviacion string            `orm:"column(codigo_abreviacion);null"`
 	Activo            bool              `orm:"column(activo)"`
 	NumeroOrden       float64           `orm:"column(numero_orden);null"`
+	FechaModificacion string            `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *NucleoBasicoConocimiento) TableName() string {
@@ -30,6 +32,9 @@ func init() {
 // AddNucleoBasicoConocimiento insert a new NucleoBasicoConocimiento into database and returns
 // last inserted Id on success.
 func AddNucleoBasicoConocimiento(m *NucleoBasicoConocimiento) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -125,6 +130,9 @@ func GetAllNucleoBasicoConocimiento(query map[string]string, fields []string, so
 func UpdateNucleoBasicoConocimientoById(m *NucleoBasicoConocimiento) (err error) {
 	o := orm.NewOrm()
 	v := NucleoBasicoConocimiento{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
