# swagger/swagger.json
@@ -361,6 +361,179 @@
                 }
             }
         },
+        "/linea_investigacion/": {
+            "get": {
+                "tags": [
+                    "linea_investigacion"
+                ],
+                "description": "get LineaInvestigacion",
+                "operationId": "LineaInvestigacionController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.LineaInvestigacion"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "linea_investigacion"
+                ],
+                "description": "create LineaInvestigacion",
+                "operationId": "LineaInvestigacionController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for LineaInvestigacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LineaInvestigacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.LineaInvestigacion"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/linea_investigacion/{id}": {
+            "get": {
+                "tags": [
+                    "linea_investigacion"
+                ],
+                "description": "get LineaInvestigacion by id",
+                "operationId": "LineaInvestigacionController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.LineaInvestigacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "linea_investigacion"
+                ],
+                "description": "update the LineaInvestigacion",
+                "operationId": "LineaInvestigacionController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for LineaInvestigacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LineaInvestigacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.LineaInvestigacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "linea_investigacion"
+                ],
+                "description": "delete the LineaInvestigacion",
+                "operationId": "LineaInvestigacionController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
         "/nucleo_basico_conocimiento/": {
             "get": {
                 "tags": [
@@ -1241,6 +1414,9 @@
                 "Descripcion": {
                     "type": "string"
                 },
+                "FechaModificacion": {
+                    "type": "string"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -1266,6 +1442,42 @@
                 },
                 "Descripcion": {
                     "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "number",
+                    "format": "double"
+                }
+            }
+        },
+        "models.LineaInvestigacion": {
+            "title": "LineaInvestigacion",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "GrupoInvestigacion": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "Id": {
                     "type": "integer",
@@ -1296,6 +1508,9 @@
                 "Descripcion": {
                     "type": "string"
                 },
+                "FechaModificacion": {
+                    "type": "string"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -1322,13 +1537,8 @@
                 "Descripcion": {
                     "type": "string"
                 },
-                "FechaCreacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
                 "FechaModificacion": {
-                    "type": "string",
-                    "format": "datetime"
+                    "type": "string"
                 },
                 "Id": {
                     "type": "integer",
@@ -1359,6 +1569,9 @@
                 "Descripcion": {
                     "type": "string"
                 },
+                "FechaModificacion": {
+                    "type": "string"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -1385,13 +1598,8 @@
                 "Descripcion": {
                     "type": "string"
                 },
-                "FechaCreacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
                 "FechaModificacion": {
-                    "type": "string",
-                    "format": "datetime"
+                    "type": "string"
                 },
                 "Id": {
                     "type": "integer",
@@ -1417,6 +1625,9 @@
                     "type": "string"
                 },
                 "Descripcion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
                     "type": "string"
                 },
                 "Id": {
@@ -1461,6 +1672,10 @@
         {
             "name": "grupo_investigacion",
             "description": "GrupoInvestigacionController operations for GrupoInvestigacion\n"
+        },
+        {
+            "name": "linea_investigacion",
+            "description": "LineaInvestigacionController operations for LineaInvestigacion\n"
         }
     ]
 }
